Textures, bugfix & Screen
Made the ui textures the right size
Magic Protection has the right compatibility tag now
EnchantmentScreen & Handler changes, still not entirely functional...